# Nexus-o1

./: .gitignore  LLM.md  Makefile  ORG_README.md  README.md  README_supra-nexus-o1-instruct-v1.1.md  README_supra-nexus-o1-instruct.md  README_supra-nexus-o1-thinking-v1.1.md  README_supra-nexus-o1-thinking.md  SUPRA_ORG_README.md  comprehensive_supra_upload.py  create_all_formats.py  dataset_README.md  deploy_real_models.py  deploy_supra_nexus.py  final_verification.py  fix_accurate_sizes.py  fix_all_references.py  fix_model_size.py  pyproject.toml  reorganize_like_qwen.py  setup.py  setup_github_mirror.py  simple_format_converter.py  supra_identity_data.jsonl  supra_identity_dataset.py  test_all_fixes.py  train_and_push_v1_1.py  train_and_test_supra.py  train_instruct_job.py  train_sequential.py  train_supra_parallel.py  train_supra_thinking.py  train_thinking_job.py  train_with_mlx.py  update_all_cards.py  update_to_qwen3_4b_2507.py  upload_training_data.py  upload_v1_1.sh  verify_model_params.py  (+1 more)
configs/: zoo_gym_config.yaml
docs/: datasets.md  organization.md
paper/: README.md  main.tex  references.bib
scripts/: deploy_zenlm.py  generate_benchmark_report.py  run_all_tests.py  setup_mirror.py  upload_comprehensive.py  upload_huggingface.py
supra_nexus/: __init__.py
tests/: README.md  eval_benchmarks.py  eval_gsm8k.py  test_cot.py  test_inference.py  test_mlx.py
training/: mlx_instruct_train.jsonl  mlx_instruct_valid.jsonl  mlx_thinking_train.jsonl  mlx_thinking_valid.jsonl  nexus-o1-upgrade-1.jsonl  supra_identity.jsonl  supra_instruct.jsonl  (+8 more)
(+32 files in other folders)
