[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supra-nexus"
version = "1.0.0"
description = "Advanced reasoning models with transparent thought"
authors = [{name = "Supra Foundation LLC"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]
mlx = ["mlx", "mlx-lm"]
gym = ["zoo-gym @ git+https://github.com/zooai/gym"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
